--- a/src/app.css
+++ b/src/app.css
@@ -179,4 +179,9 @@
 		-ms-overflow-style: none; /* IE and Edge */
 		scrollbar-width: none; /* Firefox */
 	}
+
+	.tw-vertical-text {
+		writing-mode: vertical-rl;
+		@apply rotate-180;
+	}
 }
