--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --primary: #e7e5e4;
+  --secondary: #1e40af;
+}
+
 @layer base {
   html {
     @apply bg-stone-100;
@@ -12,15 +17,26 @@
   .tw-animation {
     @apply transition duration-300 ease-in-out;
   }
-  /* For Webkit-based browsers (Chrome, Safari and Opera) */
-  .tw-scrollbar-hide::-webkit-scrollbar {
-    display: none;
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--secondary) var(--primary);
   }
 
-  /* For IE, Edge and Firefox */
-  .tw-scrollbar-hide {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: var(--primary);
+    border-radius: 5px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: var(--secondary);
+    border-radius: 14px;
+    border: 3px solid var(--primary);
   }
 
   .tw-vertical-text {
